load testcase count dynamically

--- a/mixins/QATrackerReport.pug
+++ b/mixins/QATrackerReport.pug
@@ -23,6 +23,6 @@ DSTAutomationReport(xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:no
   for testCase in testCases
    +createTestCase(testCase)
  name oie
- totalTestCaseCount 2
- passedTestCaseCount 1
- failedTestCaseCount 1
+ totalTestCaseCount #{totalTestCaseCount}
+ passedTestCaseCount #{passedTestCaseCount}
+ failedTestCaseCount #{failedTestCaseCount}
