timeTaken also dynamic

--- a/mixins/QATrackerReport.pug
+++ b/mixins/QATrackerReport.pug
@@ -4,7 +4,7 @@ mixin createTestCase(testCase)
     description #{testCase.description}
     exceptionMessage #{testCase.exceptionMessage}
     status #{testCase.status}
-    timeTaken 25
+    timeTaken #{testCase.timeTaken}
     
 doctype xml
 DSTAutomationReport(xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="buildreport.xsd")
